hw-detect (1.60) UNRELEASED; urgency=low

  [ Guido Guenther ]
  * Add optional multipath detection to disk-detect.sh (triggered by
    disk-detect/multipath/enable). Closes: #440439.

 -- Otavio Salvador <otavio@debian.org>  Tue, 26 Feb 2008 10:17:27 -0300

hw-detect (1.59) unstable; urgency=low

  [ Updated translations ]
  * Amharic (am.po) by tegegne tefera
  * Dzongkha (dz.po) by Jurmey Rabgay
  * Finnish (fi.po) by Esko Arajärvi
  * Hindi (hi.po) by Kumar Appaiah
  * Indonesian (id.po) by Arief S Fitrianto
  * Korean (ko.po) by Changwoo Ryu
  * Kurdish (ku.po) by Erdal Ronahi
  * Latvian (lv.po) by Viesturs Zarins
  * Malayalam (ml.po) by Praveen|പ്രവീണ്‍ A|എ
  * Panjabi (pa.po) by Amanpreet Singh Alam
  * Portuguese (Brazil) (pt_BR.po) by Felipe Augusto van de Wiel (faw)
  * Turkish (tr.po) by Recai Oktaş
  * Traditional Chinese (zh_TW.po) by Tetralet

 -- Otavio Salvador <otavio@debian.org>  Fri, 15 Feb 2008 08:14:58 -0200

hw-detect (1.58) unstable; urgency=low

  * Install acpi-support-base, needed now to get power button shutdowns to
    work in non-gui environments since acpid dropped that support.

 -- Joey Hess <joeyh@debian.org>  Sat, 17 Nov 2007 21:34:08 -0500

hw-detect (1.57) unstable; urgency=low

  [ Colin Watson ]
  * Discard errors from grepping /sys/bus/pci/devices/*/class, in case
    /sys/bus/pci/devices exists but not the class files.

  [ Frans Pop ]
  * Various code and whitespace cleanups.
  * No longer load isofs by default as it's loaded automatically when mount is
    called with '-t iso9660' which we do both in cdrom-detect and iso-scan.
  * No longer explicitly load ide-core.
  * Stop loading all IDE driver modules by default as they should be loaded
    correctly automatically by the kernel/udev. For now, the old behavior can
    still be forced by booting with hw-detect/load-ide=true.
    The ide-floppy driver module may not be loaded automatically, but
    mountfloppy (0.14) will try to load it when needed.
