@@ -4,7 +4,13 @@ hw-detect (1.60) UNRELEASED; urgency=low
   * Add optional multipath detection to disk-detect.sh (triggered by
     disk-detect/multipath/enable). Closes: #440439.
 
- -- Otavio Salvador <otavio@debian.org>  Tue, 26 Feb 2008 10:17:27 -0300
+  [ Frans Pop ]
+  * Some older systems have a disk controller that is not listed by lspci,
+    but that is supported by ide-generic. Load ide-generic if an ISA bus is
+    detected and, if new block devices become available, register the module
+    for inclusion in the initrd. Closes: #472487.
+
+ -- Frans Pop <fjp@debian.org>  Thu, 03 Apr 2008 13:16:50 +0200
 
 hw-detect (1.59) unstable; urgency=low
 
